working on api to fetch data for home
